--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,78 @@ h2 {
     height: auto;
     margin: 20px 0;
 }
+
+/* section 7 */
+
+.section-title {
+    color: #007b5e;
+    font-family: Arial, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.video-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.video-placeholder {
+    width: 633px;
+    height: 390px;
+    background-color: #333;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+iframe {
+    border-radius: 10px;
+}
+
+.testimonial-container {
+    max-width: 600px;
+    margin: 40px auto;
+    position: relative;
+}
+.stars {
+    color: #ff9800;
+    margin-bottom: 10px;
+    position: absolute;
+    top: -30px;
+    left: 15;
+}
+.testimonial-card {
+    width: 400px;
+    height: 300px;
+    background-color: white;
+    border-radius: 24px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+.testimonial-text {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 20px;
+}
+.author {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+}
+.position {
+    font-size: 14px;
+    color: #00bfa5;
+}
+.quote-icon {
+    font-size: 60px;
+    color: #ffeb3b;
+    position: absolute;
+    bottom: -50px;
+    right: 80px;
+}
