--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,32 @@ nav {
     padding: 42px 126px 42px 83px;
 }
 
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
 h2 {
     font-weight: bold;
     color: #129D94;
 }
 
 .card {
+    display: flex;
+    align-items: flex-start;
     border: none;
     border-radius: 15px;
+
+    .bi{
+        font-size: 2rem;
+    }
 }
 
 .layanan-premium .card h5 {
@@ -77,6 +95,23 @@ h2 {
     width: 100%;
     height: 70px;
     position: relative;
+    border: none;
+}
+
+.btn-custom-2 {
+    /*background-color: #f7b500;*/
+    color: white;
+    border-radius: 50px;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    /*font-weight: bold;*/
+    width: 100%;
+    height: 45px;
+    position: relative;
+    border: none;
 }
 
 .ikon-wrapper {
@@ -88,10 +123,11 @@ h2 {
     align-items: center;
     justify-content: center;
     margin-right: 10px;
+    margin-left: -1.2rem;
 }
 
 .ikon {
-    width: 30px;
+    width: 32px;
     height: 30px;
 }
 
@@ -151,7 +187,7 @@ iframe {
     left: 15;
 }
 .testimonial-card {
-    width: 400px;
+    width: 365px;
     height: 300px;
     background-color: white;
     border-radius: 24px;
@@ -160,17 +196,17 @@ iframe {
     position: relative;
 }
 .testimonial-text {
-    font-size: 16px;
+    font-size: 14px;
     color: #333;
     margin-bottom: 20px;
 }
 .author {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     color: #333;
 }
 .position {
-    font-size: 14px;
+    font-size: 13px;
     color: #00bfa5;
 }
 .quote-icon {
@@ -179,4 +215,73 @@ iframe {
     position: absolute;
     bottom: -50px;
     right: 80px;
+}
+
+.sec1{
+    /*width: 100vw;*/
+    display: flex;
+    overflow: hidden;
+}
+
+.sec1-1{
+    margin-top: 5rem;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    h1{
+        color: #168385;
+        font-weight: bold;
+        font-size: 2.5rem;
+    }
+}
+
+.sec2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sec2-1{
+    display: flex;
+}
+
+.sec2-2{
+    margin-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+
+.sec3{
+    h5{
+        font-size: 1.2rem;
+    }
+}
+
+.unta{
+    display: flex;
+    width: 500px;
+    height: 3rem;
+    background: #168385;
+    border-radius: 3rem;
+    color: white;
+    align-items: center;
+    padding-left: 3rem;
+    justify-content: flex-start;
+
+    h5{
+        margin-left: 5px;
+        margin-top: 5px;
+        font-size: 1rem;
+    }
+
+}
+
+.cek{
+    margin-left: -4.3rem;
+    width: 3.1rem;
 }
