--- a/css/style.css
+++ b/css/style.css
@@ -23,21 +23,60 @@ main {
     flex-direction: column;
 }
 
-nav {
-    padding: 42px 126px 42px 83px;
+/* Mengatur warna latar belakang navbar */
+.navbar {
+    background-color: #e6f2f2; /* Warna serupa seperti pada gambar */
 }
 
-.header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+/* Mengatur gaya untuk link menu */
+.nav-link {
+    color: #3c3c3c;
+    font-weight: 500;
+    font-size: 18px;
 }
 
-.menu{
-    display: flex;
-    gap: 2rem;
-    align-items: center;
+.nav-link:hover {
+    color: #168385;
 }
+
+/* Tombol Masuk */
+.btn-outline-light {
+    background-color: white;
+    color: #6C6C6C;
+    border: none;
+    border-radius: 80px;
+    width: 120px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Tombol Daftar */
+.btn-warning {
+    background-color: #f7b500;
+    color: white;
+    width: 120px;
+    border: none;
+    border-radius: 80px;
+}
+
+.btn-warning:hover {
+    background-color: #d6a100;
+}
+
+/* Atur jarak antar elemen */
+.navbar-nav .nav-item {
+    margin-left: 20px;
+}
+
+.navbar-brand {
+    margin-right: 50px;
+}
+
+
+/* .menu{
+    display: flex;
+    gap: 50px;
+    align-items: center;
+} */
 
 h2 {
     font-weight: bold;
@@ -80,6 +119,19 @@ h2 {
 .jenis-soal-item p {
     font-weight: bold;
     color: #343A40;
+}
+
+.btn-custom-sec8 {
+    background-color: white; /* Warna latar belakang tombol */
+    color: #168385; /* Warna teks tombol */
+    border: none; /* Menghilangkan border default */
+    transition: background-color 0.3s, color 0.3s; /* Animasi transisi saat hover */
+    font-family: 'DM Sans';
+}
+
+.btn-custom-sec8:hover {
+    background-color: #f7b500; /* Warna latar belakang saat hover */
+    color: white; /* Warna teks saat hover */
 }
 
 .btn-custom {
@@ -226,6 +278,7 @@ iframe {
 .sec1-1{
     margin-top: 5rem;
     width: 60%;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -234,6 +287,11 @@ iframe {
         color: #168385;
         font-weight: bold;
         font-size: 2.5rem;
+    }
+
+    h5 {
+        text-align: justify;
+        font-family: 'Nunito Sans';
     }
 }
 
@@ -252,13 +310,14 @@ iframe {
     margin-top: 8rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-
+    gap: 20px;
+    margin-left: 120px;
 }
 
 .sec3{
     h5{
         font-size: 1.2rem;
+        text-align: left;
     }
 }
 
@@ -359,3 +418,9 @@ iframe {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+/* sementara */
+
+
+
+/* sementara */
